--- a/package.json
+++ b/package.json
@@ -26,13 +26,17 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
+    "geocode-wifi": "^1.0.1",
     "google-maps-react": "^1.1.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
     "mysql": "^2.13.0",
+    "node-wifiscanner": "^0.2.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-google-maps": "^7.2.0",
-    "wifi-location": "0.0.1"
+    "wifi-location": "0.0.1",
+    "wifi-scanner": "0.0.4",
+    "wifi-triangulate": "^1.1.2"
   }
 }
