--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
     "mysql": "^2.13.0",
+    "node-wifi-utils": "0.0.1",
     "node-wifiscanner": "^0.2.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
