--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-wifi-utils": "0.0.1",
     "node-wifiscanner": "^0.2.1",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.4.2",
     "react-google-maps": "^7.2.0",
     "react-sound": "^0.8.0",
