--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js",
-    "start": "webpack & node server/server.js"
+    "start": "webpack & node server/index.js"
   },
   "author": "Beth Johnson",
   "license": "ISC",
