--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-dom": "^15.4.2",
     "react-google-maps": "^7.2.0",
     "react-sound": "^0.8.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "wifi-location": "0.0.1",
     "wifi-scanner": "0.0.4",
     "wifi-triangulate": "^1.1.2"
